Bug 5089 - Spelling fix for duplicate
Summary: Spelling fix for duplicate
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.17
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-02 16:02 UTC by Jorma Karvonen
Modified: 2007-10-03 13:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorma Karvonen 2007-10-02 16:02:54 UTC
The following message in gas-2.17.90.pot should include "duplicate", not
"dupicate", I suppose.

#: config/tc-arm.c:3054
msgid "dupicate .handlerdata directive"
Comment 1 Nick Clifton 2007-10-03 13:49:11 UTC
Spelling fix checked in.