PR gas/5089  * config/tc-arm.c (s_arm_unwind_handlerdata): Fix spelling typo. PR gas/5090    (md_assemble): Fix spelling typo.